mirui-macros/tests/ui/on_qualified_path.stderr
error: qualified `on Slider::ValueChanged` does not match enclosing widget `View`; drop the qualifier or rename the widget
  --> tests/ui/on_qualified_path.rs:17:23
   |
17 |         View () {} on Slider::ValueChanged { todo!() }
   |                       ^^^^^^
